--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.4.0",
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.13",
-    "pino": "^9.1.0"
+    "pino": "^9.1.0",
+    "zod": "^3.23.8"
   }
 }
